--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
+    "@supabase/supabase-js": "^2.90.1",
+    "@types/cropperjs": "^1.1.5",
+    "clsx": "^2.1.1",
+    "cropperjs": "^1.6.2",
+    "framer-motion": "^12.26.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-cropper": "^2.3.3",
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
